project(challengebook CXX)

add_executable(napsackproblem_1bluteforce napsackproblem_1bluteforce.cpp)
add_executable(napsackproblem_2memorization napsackproblem_2memorization.cpp)
add_executable(napsackproblem_3dploop napsackproblem_3dploop.cpp)
add_executable(napsackproblem_4dploop_forward napsackproblem_4dploop_forward.cpp)
add_executable(napsackproblem_5dploop_forwardsending napsackproblem_5dploop_forwardsending.cpp)
add_executable(longest_common_subsequence longest_common_subsequence.cpp)
add_executable(nolim_napsackproblem_1tripleloop nolim_napsackproblem_1tripleloop.cpp)
add_executable(nolim_napsackproblem_2doubleloop nolim_napsackproblem_2doubleloop.cpp)
add_executable(napsackproblem_6dploop_reusevector napsackproblem_6dploop_reusevector.cpp)
add_executable(nolim_napsackproblem_3reusevector nolim_napsackproblem_3reusevector.cpp)
add_executable(hugeweight_napsackproblem hugeweight_napsackproblem.cpp)
add_executable(hugeweight_napsackproblem_2reusevector hugeweight_napsackproblem_2reusevector.cpp)
