project(challengebook CXX)

add_executable(napsackproblem_1bluteforce napsackproblem_1bluteforce.cpp)
add_executable(napsackproblem_2memorization napsackproblem_2memorization.cpp)
add_executable(napsackproblem_3dploop napsackproblem_3dploop.cpp)
add_executable(napsackproblem_4dploop_forward napsackproblem_4dploop_forward.cpp)
add_executable(napsackproblem_5dploop_forwardsending napsackproblem_5dploop_forwardsending.cpp)
add_executable(longest_common_subsequence longest_common_subsequence.cpp)
add_executable(nolim_napsackproblem_1tripleloop nolim_napsackproblem_1tripleloop.cpp)
add_executable(nolim_napsackproblem_2doubleloop nolim_napsackproblem_2doubleloop.cpp)
add_executable(napsackproblem_6dploop_reusevector napsackproblem_6dploop_reusevector.cpp)
add_executable(nolim_napsackproblem_3reusevector nolim_napsackproblem_3reusevector.cpp)
add_executable(hugeweight_napsackproblem hugeweight_napsackproblem.cpp)
add_executable(hugeweight_napsackproblem_2reusevector hugeweight_napsackproblem_2reusevector.cpp)
add_executable(limnum_partialsum_1slow limnum_partialsum_1slow.cpp)
add_executable(limnum_partialsum_2fast limnum_partialsum_2fast.cpp)
add_executable(longest_increasing_subsequence_1on2 longest_increasing_subsequence_1on2.cpp)
add_executable(longest_increasing_subsequence_wrong longest_increasing_subsequence_wrong.cpp)
add_executable(longest_increasing_subsequence_2onlogn longest_increasing_subsequence_2onlogn.cpp)
add_executable(mdivision_ofn mdivision_ofn.cpp)
